k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP # ClusterIP is the default Service type. So, if you see service without this line ('type'), it's a ClusterIP.
  selector:
    component: server
  ports:
    - port: 5000
      targetPort: 5000
