k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx # we want to create an ingress controller based on the nginx project
    nginx.ingress.kubernetes.io/use-regex: 'true' # address 404 errors on Google Cloud
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # define how the actual copy of nginx behaves - rewrite target path to '/'
spec:
  rules:
    - http:
        paths: # There are two possible paths. If it's /, send them to the React client, if it's /api/, send them to the Express Node Server.
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
